--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   flutter_svg: ^0.19.3
+  equatable: ^1.2.6
+  flutter_bloc: ^6.1.2
+  path_provider: ^1.6.10
 
 dev_dependencies:
   flutter_test:
